# ananoduerme

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bot_detection.py  commands.py  database.py  justfile  main.py  pyproject.toml  scan_users.py  settings.py  show_db.py  telegram_bot.py
.github/workflows/: pre-commit.yml
tests/: test_database.py
