[project]
name = "ananoduerme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "logfire[asyncio,httpx,logging,sqlite3]>=3.22.0",
    "pydantic-settings>=2.10.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ty>=0.0.1a13",
]
